<resources>
    <string name="app_name">ECHO Cocktails</string>
    <string name="echonet_signal">ECHONET SIGNAL: [|||||] 100%</string>
    <string name="search_hint">SEARCH COCKTAIL...</string>
    <string name="default_username">VAULT HUNTER</string>
    <string name="back_button">&lt; BACK</string>
    <string name="ingredients_label">INGREDIENTS:</string>
    <string name="instructions_label">INSTRUCTIONS:</string>
    <string name="config_title">ECHO-3 CONFIGURATION</string>
    <string name="vault_hunter_name_label">VAULT HUNTER NAME:</string>
    <string name="select_avatar_label">SELECT AVATAR:</string>
    <string name="select_theme_label">SELECT VISUAL THEME:</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="error_categories">Error loading ECHOnet categories</string>
    <string name="error_connection">Connection error with ECHOnet</string>
    <string name="filter_failed">Filter failed</string>
    <string name="bartender_on">BARTENDER MODE: ON</string>
    <string name="bartender_off">BARTENDER MODE: OFF</string>
    <string name="voice_search_desc">Voice Search</string>
    <string name="theme_pandora">PANDORA</string>
    <string name="theme_hyperion">HYPERION</string>
    <string name="theme_maliwan">MALIWAN</string>
    <string name="theme_jakobs">JAKOBS</string>
    <string name="theme_guac">GUAC</string>
    <string name="theme_torgue">TORGUE</string>
    <string name="no_results">NO COCKTAILS FOUND IN ECHONET</string>
    <string name="voice_not_supported">Voice search not supported</string>
</resources>
